{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 7,
  "lineage": "24f1ca2a-ea17-e4dc-b1a5-ebb188b0be0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c1b6ffb65a5eb4f",
            "domain": "vpc",
            "id": "eipalloc-02c1b6ffb65a5eb4f",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-13-132-135.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.132.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EKSWorkshop-ngw-ip"
            },
            "tags_all": {
              "Name": "EKSWorkshop-ngw-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "EKS_POC_PROJECT_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:internet-gateway/igw-05a957470a1782813",
            "id": "igw-05a957470a1782813",
            "owner_id": "255996260372",
            "tags": {
              "Name": "EKSWorkshop-igw"
            },
            "tags_all": {
              "Name": "EKSWorkshop-igw"
            },
            "vpc_id": "vpc-04b5c129ef649e895"
          },
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c1b6ffb65a5eb4f",
            "connectivity_type": "public",
            "id": "nat-07e2ea58ddd4f79c0",
            "subnet_id": "subnet-085939eb82c959b37",
            "tags": {
              "Name": "EKSWorkshop-ngw"
            },
            "tags_all": {
              "Name": "EKSWorkshop-ngw"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.AZ1_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:route-table/rtb-0358de986d492b85b",
            "id": "rtb-0358de986d492b85b",
            "owner_id": "255996260372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a957470a1782813",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EKSWorkshop-Default-rt"
            },
            "tags_all": {
              "Name": "EKSWorkshop-Default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b5c129ef649e895"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.EKS_POC_PROJECT_vpc",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3a795e5d805e367",
            "route_table_id": "rtb-0358de986d492b85b",
            "subnet_id": "subnet-085939eb82c959b37"
          },
          "dependencies": [
            "aws_internet_gateway.EKS_POC_PROJECT_vpc",
            "aws_route_table.main",
            "aws_subnet.AZ1_public",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:security-group/sg-0cfece710643a31db",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cfece710643a31db",
            "ingress": [],
            "name": "EKSWorkshop-ControlPlane-sg",
            "name_prefix": "",
            "owner_id": "255996260372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKSWorkshop-ControlPlane-sg"
            },
            "tags_all": {
              "Name": "EKSWorkshop-ControlPlane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b5c129ef649e895"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:security-group/sg-0db2e9712a03596bc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0db2e9712a03596bc",
            "ingress": [],
            "name": "EKSWorkshop-Worker-sg",
            "name_prefix": "",
            "owner_id": "255996260372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKSWorkshop-Worker-sg"
            },
            "tags_all": {
              "Name": "EKSWorkshop-Worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b5c129ef649e895"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:security-group/sg-040cee440758d6450",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-040cee440758d6450",
            "ingress": [],
            "name": "EKSWorkshop-cluster-sg",
            "name_prefix": "",
            "owner_id": "255996260372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKSWorkshop-cluster-sg"
            },
            "tags_all": {
              "Name": "EKSWorkshop-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b5c129ef649e895"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:security-group/sg-0eb8c774825f0727b",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb8c774825f0727b",
            "ingress": [],
            "name": "EKSWorkshop-node-sg",
            "name_prefix": "",
            "owner_id": "255996260372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKSWorkshop-node-sg",
              "kubernetes.io/cluster/EKSWorkshop-cluster": "owned"
            },
            "tags_all": {
              "Name": "EKSWorkshop-node-sg",
              "kubernetes.io/cluster/EKSWorkshop-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b5c129ef649e895"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:security-group/sg-00ae8d070dcc2fb58",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00ae8d070dcc2fb58",
            "ingress": [],
            "name": "EKSWorkshop-Public-sg",
            "name_prefix": "",
            "owner_id": "255996260372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKSWorkshop-Public-sg"
            },
            "tags_all": {
              "Name": "EKSWorkshop-Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b5c129ef649e895"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3292908895",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cee440758d6450",
            "security_group_rule_id": "sgr-09b8d4d413773c183",
            "self": false,
            "source_security_group_id": "sg-0eb8c774825f0727b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-602087116",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040cee440758d6450",
            "security_group_rule_id": "sgr-01229229b3bd74280",
            "self": false,
            "source_security_group_id": "sg-0eb8c774825f0727b",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4094393905",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfece710643a31db",
            "security_group_rule_id": "sgr-0e129e3c47b09c843",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-767557369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cfece710643a31db",
            "security_group_rule_id": "sgr-02a5e8f9db5c79796",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2723373788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0db2e9712a03596bc",
            "security_group_rule_id": "sgr-0b2e3ed8f00728094",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-231075529",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0db2e9712a03596bc",
            "security_group_rule_id": "sgr-08e69e8d0ecc09d36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2431058460",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb8c774825f0727b",
            "security_group_rule_id": "sgr-0214232fc9cba1380",
            "self": false,
            "source_security_group_id": "sg-040cee440758d6450",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3420388641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0db2e9712a03596bc",
            "security_group_rule_id": "sgr-071d51fe60ea44daf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1477802332",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eb8c774825f0727b",
            "security_group_rule_id": "sgr-0a564bb42cfb37c09",
            "self": false,
            "source_security_group_id": "sg-0eb8c774825f0727b",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1627206954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00ae8d070dcc2fb58",
            "security_group_rule_id": "sgr-02ae5918f136c332e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-941729914",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ae8d070dcc2fb58",
            "security_group_rule_id": "sgr-0055c25c4fdc26a2b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1494273498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ae8d070dcc2fb58",
            "security_group_rule_id": "sgr-027a9a12b347874f6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AZ1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:subnet/subnet-0c94e3017f303c774",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c94e3017f303c774",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255996260372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKSWorkshop-private-sg"
            },
            "tags_all": {
              "Name": "EKSWorkshop-private-sg"
            },
            "vpc_id": "vpc-04b5c129ef649e895"
          },
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AZ1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:subnet/subnet-085939eb82c959b37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085939eb82c959b37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255996260372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKSWorkshop-public-sg"
            },
            "tags_all": {
              "Name": "EKSWorkshop-public-sg"
            },
            "vpc_id": "vpc-04b5c129ef649e895"
          },
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "EKS_POC_PROJECT_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:255996260372:vpc/vpc-04b5c129ef649e895",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d48c25b60ce53dd1",
            "default_route_table_id": "rtb-00cc3c96dc22beaff",
            "default_security_group_id": "sg-0f94ba36e33b31b6a",
            "dhcp_options_id": "dopt-0c9486ca8dc3d6037",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b5c129ef649e895",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cc3c96dc22beaff",
            "owner_id": "255996260372",
            "tags": {
              "Name": "EKSWorkshop-vpc"
            },
            "tags_all": {
              "Name": "EKSWorkshop-vpc"
            }
          }
        }
      ]
    }
  ]
}